spacing fix

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ body {
     color:black;
 }
 
-ul {
+.features {
     display: table;
     margin: 20px auto;
 }
